--- a/packages/static/src/sass/_var.scss
+++ b/packages/static/src/sass/_var.scss
@@ -20,3 +20,4 @@ $font-size-xl: 72px;
 $font-size-xxl: 96px;
 
 $section-gap: 400px;
+$last-section-gap: 200px;
